[20240708更新] 配合前端，建置會員管理相關API(讀取、新增、刪除、修改)
